feat: ajusta estilos e estrutura de pastas/arquivos

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <a class="btn" href="#front-end">Front-end</a>
         <a class="btn" href="#back-end">Back-end</a>
         <a class="btn" href="#documentacao">Documentação</a>
+        <a href="https://make-a-list.vercel.app/" target="_blank" class="btn">
+          <button class="btn-link">Acesse Make a List!</button></a
+        >
       </div>
       <div class="right">
         <section id="apresentacao">
@@ -63,16 +66,22 @@
           </p>
           <ul>
             <li>
-              Eduarda Matos (Líder): Pesquisa de mercado, identidade visual,
-              protótipo, testes de qualidade e usabilidade.
+              <strong>Eduarda Matos</strong> (team leader): Pesquisa de mercado,
+              identidade visual, protótipo, testes de qualidade e usabilidade.
             </li>
-            <li>Gabriel Imenes: Front-end e documentação auxiliares.</li>
-            <li>Igor Achette: Front-end principal.</li>
             <li>
-              João Paulo Falcuci: Documentação detalhada, testes de qualidade e
-              usabilidade.
+              <strong>Gabriel Imenes</strong>: Auxílio nas documentações e no
+              front-end.
             </li>
-            <li>Raul Araújo: Back-end da aplicação e banco de dados.</li>
+            <li><strong>Igor Achette</strong>: Front-end principal.</li>
+            <li>
+              <strong>João Paulo Falcuci</strong>: Documentação detalhada,
+              testes de qualidade e usabilidade.
+            </li>
+            <li>
+              <strong>Raul Araújo</strong>: Back-end da aplicação e banco de
+              dados.
+            </li>
           </ul>
         </section>
         <section id="sobre-o-projeto">
@@ -94,9 +103,7 @@
           </p>
           <div id="identidade-container">
             <ul>
-              <li>
-                <img src="./images/azul-ardosia.png" alt="Cor Azul Árdósia" />
-              </li>
+              <img src="./images/azul-ardosia.png" alt="Cor Azul Árdósia" />
               <li>Azul Árdósia</li>
               <li>Inspiração</li>
               <li>Criatividade</li>
@@ -104,7 +111,7 @@
             </ul>
 
             <ul>
-              <li><img src="./images/azul-ceu.png" alt="Cor Azul Céu" /></li>
+              <img src="./images/azul-ceu.png" alt="Cor Azul Céu" />
               <li>Azul Céu</li>
               <li>Amizade</li>
               <li>Confiança</li>
@@ -112,9 +119,7 @@
             </ul>
 
             <ul>
-              <li>
-                <img src="./images/alvacento.png" alt="Cor Alvacento" />
-              </li>
+              <img src="./images/alvacento.png" alt="Cor Alvacento" />
               <li>Alvacento</li>
               <li>Equilíbrio</li>
               <li>Elegância</li>
@@ -128,7 +133,9 @@
             Para a composição do logotipo, utilizamos a fonte Kaushan Script
             pela sua caligrafia elegante remetendo coisas escritas à mão.
           </p>
-          <img src="./images/logotipo.png" alt="Logotipo Make a List!" />
+          <div id="img-centro">
+            <img src="./images/logotipo.png" alt="Logotipo Make a List!" />
+          </div>
         </section>
         <section id="identidade-visual-logomarca">
           <h2>Identidade Visual - Logomarca</h2>
@@ -136,23 +143,66 @@
             Para logomarca, mantivemos o primeiro e o último elemento do
             logotipo.
           </p>
-          <img src="./images/logomarca.png" alt="Logomarca Make a List!" />
+          <div id="img-centro">
+            <img src="./images/logomarca.png" alt="Logomarca Make a List!" />
+          </div>
         </section>
         <section id="identidade-visual-moodboard">
           <h2>Identidade Visual - Moodboard</h2>
-          <img src="./images/moodboard.png" alt="Moodboard Make a List!" />
+          <div id="img-centro">
+            <img src="./images/moodboard.png" alt="Moodboard Make a List!" />
+          </div>
         </section>
         <section id="prototipo">
           <h2>Protótipo</h2>
-          <img src="./images/prototipo.png" alt="Protótipo Make a List!" />
+          <div id="img-centro">
+            <img src="./images/prototipo.png" alt="Protótipo Make a List!" />
+          </div>
         </section>
         <section id="front-end">
           <h2>Front-end</h2>
-          <p>Conteúdo da seção de front-end.</p>
+          <p>
+            O projeto "Make a List!" fora desenvolvido com modernas e atuais
+            bibliotecas e frameworks amplamente usada pelo mercado. Entre elas,
+            as principais usadas na aplicação são:
+          </p>
+          <ul>
+            <li>React</li>
+            <li>Typescript</li>
+            <li>Chakra-UI</li>
+            <li>Axios</li>
+            <li>React-Hook-Form</li>
+            <li>React-icons (material design)</li>
+          </ul>
+          <p>
+            Além de todas as tecnologias utilizadas, o projeto foi idealizado
+            para ser 100% responsivo, sendo capaz de ajustar-se a todos os tipos
+            de telas, como smartphones, tablets e desktops.
+          </p>
+          <p>
+            Acesse o repositório do front-end:
+            <a href="https://github.com/Achette/Make_a_List" target="_blank"
+              >Github</a
+            >
+          </p>
         </section>
         <section id="back-end">
           <h2>Back-end</h2>
-          <p>Conteúdo da seção de back-end.</p>
+          <p>
+            O servidor da aplicação foi desenvolvido utilizando a biblioteca
+            Express, que torna capaz de usar o próprio javascript no
+            server-side. Ele é responsável por processar todas as requisições e
+            realizar as chamadas ao banco de dados, que foi desenvolvido
+            utilizando o MongoDB.
+          </p>
+          <p>
+            Acesse o repositório do back-end:
+            <a
+              href="https://github.com/RaulSAraujo/Make_a_List_back"
+              target="_blank"
+              >Github</a
+            >
+          </p>
         </section>
         <section id="documentacao">
           <h2>Documentação - Requisitos e Casos de Uso</h2>
@@ -182,40 +232,50 @@
             <ul id="doc-bpmn">
               <li>
                 <h4>Acesso ao sistema</h4>
-                <img
-                  src="./images/bpmn-acesso_ao_sistema.svg"
-                  alt="BPMN - Acesso ao sistema"
-                />
+                <div id="img-centro">
+                  <img
+                    src="./images/bpmn-acesso_ao_sistema.svg"
+                    alt="BPMN - Acesso ao sistema"
+                  />
+                </div>
               </li>
               <li>
                 <h4>Criar listas e/ou grupos de listas de compras</h4>
-                <img
-                  src="./images/bpmn-criar_listas.svg"
-                  alt="BPMN - Criar listas e/ou grupos de listas de compras"
-                />
+                <div id="img-centro">
+                  <img
+                    src="./images/bpmn-criar_listas.svg"
+                    alt="BPMN - Criar listas e/ou grupos de listas de compras"
+                  />
+                </div>
               </li>
               <li>
                 <h4>Ações possíveis em uma lista</h4>
-                <img
-                  src="./images/bpmn-acoes_possiveis.svg"
-                  alt="BPMN - Ações possíveis em uma lista"
-                />
+                <div id="img-centro">
+                  <img
+                    src="./images/bpmn-acoes_possiveis.svg"
+                    alt="BPMN - Ações possíveis em uma lista"
+                  />
+                </div>
               </li>
               <li>
                 <h4>Editar itens da lista</h4>
-                <img
-                  src="./images/bpmn-editar_itens.svg"
-                  alt="BPMN - Editar itens da lista"
-                />
+                <div id="img-centro">
+                  <img
+                    src="./images/bpmn-editar_itens.svg"
+                    alt="BPMN - Editar itens da lista"
+                  />
+                </div>
               </li>
               <li>
                 <h4>
                   Compartilhamento de listas e/ou grupos de listas de compras
                 </h4>
-                <img
-                  src="./images/bpmn-compartilhamento.svg"
-                  alt="BPMN - Compartilhamento de listas e/ou grupos de listas de compras"
-                />
+                <div id="img-centro">
+                  <img
+                    src="./images/bpmn-compartilhamento.svg"
+                    alt="BPMN - Compartilhamento de listas e/ou grupos de listas de compras"
+                  />
+                </div>
               </li>
             </ul>
           </div>
@@ -223,9 +283,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="./requisitosFuncionais.js"></script>
-    <script type="text/javascript" src="./requisitosNaoFuncionais.js"></script>
-    <script type="text/javascript" src="./casosUsos.js"></script>
+    <script type="text/javascript" src="./mock//data.js"></script>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
