feat: plano de ação 5W1H

--- a/index.html
+++ b/index.html
@@ -121,6 +121,73 @@
             facilite o processo de compras.
           </p>
         </section>
+        <section id="Plano de ação 5W1H">
+          <h2>Plano de ação 5W1H</h2>
+          <div id="plano-acao-content">
+            <h3><strong>What? - Qual o problema identificado?</strong></h3>
+            <p>
+              Falta de uma solução digital eficiente na organização e
+              compartilhamento de listas de compras entre usuários e/ou grupos
+              de usuários.
+            </p>
+          </div>
+          <div id="plano-acao-content">
+            <h3><strong>Where? - Onde o problema identificado?</strong></h3>
+            <p>
+              Grupos familiares, pessoas que dividem a mesma residência, amigos
+              ou colegas de trabalho que frequentemente precisam coordenar suas
+              compras.
+            </p>
+          </div>
+          <div id="plano-acao-content">
+            <h3><strong>When? - Quando o problema identificado?</strong></h3>
+            <p>
+              Quando usuários compartilham a responsabilidade por uma mesma
+              compra: saber quais itens precisam ser comprados, quais itens já
+              foram comprados por outros usuários, qual o preço pago e a
+              quantidade comprada?
+            </p>
+            <p>
+              Todos esses questionamentos não encontram uma solução eficiente
+              nas aplicações de listas disponíveis no mercado atualmente.
+            </p>
+          </div>
+          <div id="plano-acao-content">
+            <h3><strong>Who? - Quem é afetado pelo problema?</strong></h3>
+            <p>
+              Qualquer grupo de pessoas que compartilhem a responsabilidade
+              pelas compras.
+            </p>
+            <ul>
+              <li>
+                Pessoas que habitam a mesma residência (famílias, repúblicas,
+                pensões)
+              </li>
+              <li>Amigos que planejam eventos em conjunto.</li>
+              <li>
+                Colegas de trabalho que organizam eventos em conjunto, etc.
+              </li>
+            </ul>
+          </div>
+          <div id="plano-acao-content">
+            <h3><strong>How? - Como será solucionado o problema?</strong></h3>
+            <p>
+              Quando usuários compartilham a responsabilidade por uma mesma
+              compra: saber quais itens precisam ser comprados, quais itens já
+              foram comprados por outros usuários, qual o preço pago e a
+              quantidade comprada? Todos esses questionamentos não encontram uma
+              solução eficiente nas aplicações de listas disponíveis no mercado
+              atualmente.
+            </p>
+          </div>
+          <div>
+            <h3><strong>Why? - Por que o problema é relevante?</strong></h3>
+            <p>
+              Para otimizar e facilitar situações que requerem o fácil
+              compartilhamento de listas de compras entre os usuários. 
+            </p>
+          </div>
+        </section>
         <section id="sobre-o-projeto">
           <h2>Sobre o Projeto</h2>
           <p>
