--- a/index.html
+++ b/index.html
@@ -165,6 +165,21 @@
             <img src="../assets/images/personas.png" alt="">
           </div>
         </section>
+        <section id="matriz-csd">
+          <h2>Matriz CSD (Certezas, Suposições e Dúvidas)</h2>
+          <div id="img-centro">
+            <img src="../assets/images/matriz.png" alt="">
+          </div>
+        </section>
+        <section id="benchmark">
+          <h2>Benchmark</h2>
+          <div id="img-centro">
+            <img src="../assets/images/concorrentes1.png" alt="">
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/concorrentes2.png" alt="">
+          </div>
+        </section>
         <section id="sobre-o-projeto">
           <h2>Sobre o Projeto</h2>
           <p>
@@ -364,7 +379,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="./mock//data.js"></script>
+    <script type="text/javascript" src="./mock/data.js"></script>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
