feat: adiciona sessão jornada do usuário

--- a/index.html
+++ b/index.html
@@ -180,6 +180,21 @@
             <img src="../assets/images/concorrentes2.png" alt="">
           </div>
         </section>
+        <section id="jornada-usuario">
+          <h2>Mapa de Jornada de Usuário</h2>
+          <div id="img-centro">
+            <img src="../assets/images/mapa1.png" alt="">
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/mapa2.png" alt="">
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/mapa3.png" alt="">
+          </div>
+        </section>
+        <section id="rabiscoframe">
+          <h2>Rabiscoframe - 4-Corners</h2>
+        </section>
         <section id="sobre-o-projeto">
           <h2>Sobre o Projeto</h2>
           <p>
