--- a/index.html
+++ b/index.html
@@ -194,6 +194,21 @@
         </section>
         <section id="rabiscoframe">
           <h2>Rabiscoframe - 4-Corners</h2>
+          <div id="img-centro">
+            <img src="../assets/images/rabiscoframe1.png" alt="">
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/rabiscoframe2.png" alt="">
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/rabiscoframe3.png" alt="">
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/rabiscoframe4.png" alt="">
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/rabiscoframe5.png" alt="">
+          </div>
         </section>
         <section id="sobre-o-projeto">
           <h2>Sobre o Projeto</h2>
