refact: corrige erro que impedia de carregar imagens

--- a/index.html
+++ b/index.html
@@ -162,70 +162,105 @@
         <section id="personas">
           <h2>Personas</h2>
           <div id="img-centro">
-            <img src="../assets/images/personas.png" alt="">
+            <img src="../assets/images/personas.png" alt="" />
           </div>
         </section>
         <section id="matriz-csd">
           <h2>Matriz CSD (Certezas, Suposições e Dúvidas)</h2>
           <div id="img-centro">
-            <img src="../assets/images/matriz.png" alt="">
+            <img src="../assets/images/matriz.png" alt="" />
           </div>
         </section>
         <section id="benchmark">
           <h2>Benchmark</h2>
           <div id="img-centro">
-            <img src="../assets/images/concorrentes1.png" alt="">
+            <img src="../assets/images/concorrentes1.png" alt="" />
           </div>
           <div id="img-centro">
-            <img src="../assets/images/concorrentes2.png" alt="">
+            <img src="../assets/images/concorrentes2.png" alt="" />
           </div>
         </section>
         <section id="jornada-usuario">
           <h2>Mapa de Jornada de Usuário</h2>
           <div id="img-centro">
-            <img src="../assets/images/mapa1.png" alt="">
+            <img src="../assets/images/mapa1.png" alt="" />
           </div>
           <div id="img-centro">
-            <img src="../assets/images/mapa2.png" alt="">
+            <img src="../assets/images/mapa2.png" alt="" />
           </div>
           <div id="img-centro">
-            <img src="../assets/images/mapa3.png" alt="">
+            <img src="../assets/images/mapa3.png" alt="" />
           </div>
         </section>
         <section id="rabiscoframe">
           <h2>Rabiscoframe - 4-Corners</h2>
           <div id="img-centro">
-            <img src="../assets/images/rabiscoframe1.png" alt="">
+            <img src="../assets/images/rabiscoframe1.png" alt="" />
           </div>
           <div id="img-centro">
-            <img src="../assets/images/rabiscoframe2.png" alt="">
+            <img src="../assets/images/rabiscoframe2.png" alt="" />
           </div>
           <div id="img-centro">
-            <img src="../assets/images/rabiscoframe3.png" alt="">
+            <img src="../assets/images/rabiscoframe3.png" alt="" />
           </div>
           <div id="img-centro">
-            <img src="../assets/images/rabiscoframe4.png" alt="">
+            <img src="../assets/images/rabiscoframe4.png" alt="" />
           </div>
           <div id="img-centro">
-            <img src="../assets/images/rabiscoframe5.png" alt="">
+            <img src="../assets/images/rabiscoframe5.png" alt="" />
           </div>
         </section>
         <section id="wireframe-login">
           <h2>Wireframe - Fluxo Cadastro / Login</h2>
           <div id="img-centro">
-            <img src="../assets/images/wireframe-login.png" alt="">
+            <img src="../assets/images/wireframe-login.png" alt="" />
           </div>
         </section>
         <section id="wireframe-criacao-lista">
           <h2>Wireframe - Fluxo Criação de Listas</h2>
           <div id="img-centro">
-            <img src="../assets/images/wireframe-cadastro-lista.png" alt="">
+            <img src="../assets/images/wireframe-cadastro-lista.png" alt="" />
           </div>
         </section>
         <section>
           <h2>Wireframe - Fluxo Criação de Grupos</h2>
           <div id="img-centro">
-            <img src="../assets/images/wireframe-criacao-grupo.png" alt="">
+            <img src="../assets/images/wireframe-criacao-grupo.png" alt="" />
+          </div>
+        </section>
+        <section id="identidade-visual-cores">
+          <h2>Identidade Visual - Cores</h2>
+          <p>
+            Definimos as cores a partir das emoções que desejamos transmitir aos
+            usuários.
+          </p>
+          <div id="identidade-container">
+            <ul>
+              <img
+                src="../assets/images/azul-ardosia.png"
+                alt="Cor Azul Árdósia"
+              />
+              <li>Azul Árdósia</li>
+              <li>Inspiração</li>
+              <li>Criatividade</li>
+              <li>Estabilidade</li>
+            </ul>
+
+            <ul>
+              <img src="../assets/images/azul-ceu.png" alt="Cor Azul Céu" />
+              <li>Azul Céu</li>
+              <li>Amizade</li>
+              <li>Confiança</li>
+              <li>Tranquilidade</li>
+            </ul>
+
+            <ul>
+              <img src="../assets/images/alvacento.png" alt="Cor Alvacento" />
+              <li>Alvacento</li>
+              <li>Equilíbrio</li>
+              <li>Elegância</li>
+              <li>Sofisticação</li>
+            </ul>
           </div>
         </section>
         <section id="sobre-o-projeto">
@@ -239,38 +274,7 @@
             entre amigos e familiares.
           </p>
         </section>
-        <section id="identidade-visual-cores">
-          <h2>Identidade Visual - Cores</h2>
-          <p>
-            Definimos as cores a partir das emoções que desejamos transmitir aos
-            usuários.
-          </p>
-          <div id="identidade-container">
-            <ul>
-              <img src="./images/azul-ardosia.png" alt="Cor Azul Árdósia" />
-              <li>Azul Árdósia</li>
-              <li>Inspiração</li>
-              <li>Criatividade</li>
-              <li>Estabilidade</li>
-            </ul>
 
-            <ul>
-              <img src="./images/azul-ceu.png" alt="Cor Azul Céu" />
-              <li>Azul Céu</li>
-              <li>Amizade</li>
-              <li>Confiança</li>
-              <li>Tranquilidade</li>
-            </ul>
-
-            <ul>
-              <img src="./images/alvacento.png" alt="Cor Alvacento" />
-              <li>Alvacento</li>
-              <li>Equilíbrio</li>
-              <li>Elegância</li>
-              <li>Sofisticação</li>
-            </ul>
-          </div>
-        </section>
         <section id="identidade-visual-logotipo">
           <h2>Identidade Visual - Logotipo</h2>
           <p>
