feat: adiciona sessão tipografia

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           </div>
         </section>
         <section id="identidade-visual-cores">
-          <h2>Identidade Visual - Cores</h2>
+          <h2>Styleguide - Cores</h2>
           <p>
             Definimos as cores a partir das emoções que desejamos transmitir aos
             usuários.
@@ -261,6 +261,22 @@
               <li>Elegância</li>
               <li>Sofisticação</li>
             </ul>
+          </div>
+        </section>
+        <section id="styleguide-tipografia">
+          <h2>Styleguide - Tipografia</h2>
+          <div id="img-centro" class="column">
+            <span class="align-center">
+              <p><strong>Fonte:&nbsp; </strong></p>
+              <p id="kaushan"><strong>Kaushan Script</strong></p>
+            </span>
+            <p id="kaushan">abcdefghijklmnopqrstuvwxyz</p>
+            <p id="kaushan">ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            <p id="kaushan">0123456789</p>
+            <p><strong>Fonte: Raleway</strong></p>
+            <p>abcdefghijklmnopqrstuvwxyz</p>
+            <p>ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
+            <p>0123456789</p>
           </div>
         </section>
         <section id="sobre-o-projeto">
