refactor: altera protótipo

--- a/index.html
+++ b/index.html
@@ -279,6 +279,47 @@
             <p>0123456789</p>
           </div>
         </section>
+        <section id="identidade-visual-logotipo">
+          <h2>Styleguide - Logotipo</h2>
+          <p>
+            Para a composição do logotipo, utilizamos a fonte Kaushan Script
+            pela sua caligrafia elegante remetendo coisas escritas à mão.
+          </p>
+          <div id="img-centro">
+            <img
+              src="../assets/images/logotipo.png"
+              alt="Logotipo Make a List!"
+            />
+          </div>
+        </section>
+        <section id="identidade-visual-logomarca">
+          <h2>Styleguide - Logomarca</h2>
+          <p>
+            Para logomarca, mantivemos o primeiro e o último elemento do
+            logotipo.
+          </p>
+          <div id="img-centro">
+            <img
+              src="../assets/images/logomarca.png"
+              alt="Logomarca Make a List!"
+            />
+          </div>
+        </section>
+        <section id="identidade-visual-moodboard">
+          <h2>Identidade Visual - Moodboard</h2>
+          <div id="img-centro">
+            <img
+              src="../assets/images/moodboard.png"
+              alt="Moodboard Make a List!"
+            />
+          </div>
+        </section>
+        <section id="prototipo">
+          <h2>Protótipo</h2>
+          <div id="img-centro">
+            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGyxpSvWsYiJAOGM4fyGrhJ%2FMake-a-List!%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddev" allowfullscreen></iframe>
+          </div>
+        </section>
         <section id="sobre-o-projeto">
           <h2>Sobre o Projeto</h2>
           <p>
@@ -291,38 +332,6 @@
           </p>
         </section>
 
-        <section id="identidade-visual-logotipo">
-          <h2>Identidade Visual - Logotipo</h2>
-          <p>
-            Para a composição do logotipo, utilizamos a fonte Kaushan Script
-            pela sua caligrafia elegante remetendo coisas escritas à mão.
-          </p>
-          <div id="img-centro">
-            <img src="./images/logotipo.png" alt="Logotipo Make a List!" />
-          </div>
-        </section>
-        <section id="identidade-visual-logomarca">
-          <h2>Identidade Visual - Logomarca</h2>
-          <p>
-            Para logomarca, mantivemos o primeiro e o último elemento do
-            logotipo.
-          </p>
-          <div id="img-centro">
-            <img src="./images/logomarca.png" alt="Logomarca Make a List!" />
-          </div>
-        </section>
-        <section id="identidade-visual-moodboard">
-          <h2>Identidade Visual - Moodboard</h2>
-          <div id="img-centro">
-            <img src="./images/moodboard.png" alt="Moodboard Make a List!" />
-          </div>
-        </section>
-        <section id="prototipo">
-          <h2>Protótipo</h2>
-          <div id="img-centro">
-            <img src="./images/prototipo.png" alt="Protótipo Make a List!" />
-          </div>
-        </section>
         <section id="front-end">
           <h2>Front-end</h2>
           <p>
