feat: adiciona sessão heuristicas

--- a/index.html
+++ b/index.html
@@ -317,9 +317,50 @@
         <section id="prototipo">
           <h2>Protótipo</h2>
           <div id="img-centro">
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGyxpSvWsYiJAOGM4fyGrhJ%2FMake-a-List!%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddev" allowfullscreen></iframe>
+            <iframe
+              style="border: 1px solid rgba(0, 0, 0, 0.1)"
+              width="800"
+              height="450"
+              src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGyxpSvWsYiJAOGM4fyGrhJ%2FMake-a-List!%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddev"
+              allowfullscreen
+            ></iframe>
           </div>
         </section>
+
+        <section id="heuristicas">
+          <h2>Avaliação Heurística - 10 Heurísticas de Nielsen</h2>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica1.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica2.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica3.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica4.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica5.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica6.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica7.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica8.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica9.png" alt="" />
+          </div>
+          <div id="img-centro">
+            <img src="../assets/images/heuristica10.png" alt="" />
+          </div>
+        </section>
+
         <section id="sobre-o-projeto">
           <h2>Sobre o Projeto</h2>
           <p>
