feat: ajusta sessoes font e back end

--- a/index.html
+++ b/index.html
@@ -361,47 +361,50 @@
           </div>
         </section>
 
-        <section id="sobre-o-projeto">
-          <h2>Sobre o Projeto</h2>
-          <p>
-            A aplicação "Make a List!" é uma plataforma web projetada para
-            simplificar a criação e o compartilhamento de listas de compras de
-            supermercado e outros itens essenciais. A proposta é oferecer aos
-            usuários uma ferramenta intuitiva e conveniente para organizar suas
-            compras individuais e em grupo, facilitando também a colaboração
-            entre amigos e familiares.
-          </p>
-        </section>
-
         <section id="front-end">
-          <h2>Front-end</h2>
+          <div id="github-title">
+            <h2>Front-end</h2>
+            <button class="github-btn">
+              <a href="https://github.com/Achette/Make_a_List" target="_blank"
+                >Ver repositório no Github</a
+              >
+            </button>
+          </div>
           <p>
-            O projeto "Make a List!" fora desenvolvido com modernas e atuais
-            bibliotecas e frameworks amplamente usada pelo mercado. Entre elas,
-            as principais usadas na aplicação são:
+            Utilizamos bibliotecas e frameworks modernos e atualizados
+            amplamente trabalhados no mercado.
           </p>
-          <ul>
-            <li>React</li>
-            <li>Typescript</li>
-            <li>Chakra-UI</li>
-            <li>Axios</li>
-            <li>React-Hook-Form</li>
-            <li>React-icons (material design)</li>
-          </ul>
+          <div id="img-centro">
+            <div id="badges">
+              <img src="../assets/images/react.png" alt="React logo" />
+              <img
+                src="../assets/images/typescript.png"
+                alt="Typescript logo"
+              />
+              <img src="../assets/images/chakra.png" alt="Chakra-UI logo" />
+              <img src="../assets/images/axios.png" alt="Axios logo" />
+            </div>
+          </div>
           <p>
-            Além de todas as tecnologias utilizadas, o projeto foi idealizado
-            para ser 100% responsivo, sendo capaz de ajustar-se a todos os tipos
-            de telas, como smartphones, tablets e desktops.
+            Outras tecnologias: React-Hook-Form e React-icons (material design)
           </p>
           <p>
-            Acesse o repositório do front-end:
-            <a href="https://github.com/Achette/Make_a_List" target="_blank"
-              >Github</a
-            >
+            Além disso, o projeto foi idealizado para ser 100% responsivo, sendo
+            capaz de ajustar-se a todos os tipos de telas, como smartphones,
+            tablets e desktops.
           </p>
         </section>
         <section id="back-end">
-          <h2>Back-end</h2>
+          <div id="github-title">
+            <h2>Back-end</h2>
+            <button class="github-btn">
+              <a
+                href="https://github.com/RaulSAraujo/Make_a_List_back"
+                target="_blank"
+                >Ver repositório no Github</a
+              >
+            </button>
+          </div>
           <p>
             O servidor da aplicação foi desenvolvido utilizando a biblioteca
             Express, que torna capaz de usar o próprio javascript no
@@ -409,14 +412,13 @@
             realizar as chamadas ao banco de dados, que foi desenvolvido
             utilizando o MongoDB.
           </p>
-          <p>
-            Acesse o repositório do back-end:
-            <a
-              href="https://github.com/RaulSAraujo/Make_a_List_back"
-              target="_blank"
-              >Github</a
-            >
-          </p>
+          <div id="img-centro">
+            <div id="badges">
+              <img src="../assets/images/nodejs.png" alt="NodeJS logo" />
+              <img src="../assets/images/express.png" alt="Express logo" />
+              <img src="../assets/images/mongoDB.png" alt="MongoDB logo" />
+            </div>
+          </div>
         </section>
         <section id="documentacao">
           <h2>Documentação - Requisitos e Casos de Uso</h2>
