feat: adiciona novos links ao sidebar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
       <div class="left">
         <a class="btn" href="#apresentacao"><h1>Make a List!</h1></a>
         <a class="btn" href="#apresentacao">Apresentação</a>
-        <a class="btn" href="#identidade-visual-cores">Identidade Visual</a>
+        <a class="btn" href="#plano-de-ação-5W1H">5W1H</a>
+        <a class="btn" href="#personas">Personas</a>
+        <a class="btn" href="#matriz-csd">Matriz CSD</a>
+        <a class="btn" href="#benchmark">Benchmark</a>
+        <a class="btn" href="#jornada-usuario">Jornada do Usuário</a>
+        <a class="btn" href="#rabiscoframe">Frames</a>
+        <a class="btn" href="#styleguide-visual-cores">Styleguide</a>
         <a class="btn" href="#prototipo">Protótipo</a>
+        <a class="btn" href="#heuristicas">Avaliação Heurística</a>
         <a class="btn" href="#front-end">Front-end</a>
         <a class="btn" href="#back-end">Back-end</a>
         <a class="btn" href="#documentacao">Documentação</a>
@@ -88,7 +95,7 @@
           <h2>Briefing</h2>
           <div id="briefing-content"></div>
         </section>
-        <section id="Plano de ação 5W1H">
+        <section id="plano-de-ação-5W1H">
           <h2>Plano de ação 5W1H</h2>
           <div id="plano-acao-content">
             <h3><strong>What? - Qual o problema identificado?</strong></h3>
@@ -222,13 +229,13 @@
             <img src="../assets/images/wireframe-cadastro-lista.png" alt="" />
           </div>
         </section>
-        <section>
+        <section id="wireframe-criacao-grupo">
           <h2>Wireframe - Fluxo Criação de Grupos</h2>
           <div id="img-centro">
             <img src="../assets/images/wireframe-criacao-grupo.png" alt="" />
           </div>
         </section>
-        <section id="identidade-visual-cores">
+        <section id="styleguide-visual-cores">
           <h2>Styleguide - Cores</h2>
           <p>
             Definimos as cores a partir das emoções que desejamos transmitir aos
@@ -279,7 +286,7 @@
             <p>0123456789</p>
           </div>
         </section>
-        <section id="identidade-visual-logotipo">
+        <section id="styleguide-visual-logotipo">
           <h2>Styleguide - Logotipo</h2>
           <p>
             Para a composição do logotipo, utilizamos a fonte Kaushan Script
@@ -292,7 +299,7 @@
             />
           </div>
         </section>
-        <section id="identidade-visual-logomarca">
+        <section id="styleguide-visual-logomarca">
           <h2>Styleguide - Logomarca</h2>
           <p>
             Para logomarca, mantivemos o primeiro e o último elemento do
@@ -305,7 +312,7 @@
             />
           </div>
         </section>
-        <section id="identidade-visual-moodboard">
+        <section id="styleguide-visual-moodboard">
           <h2>Identidade Visual - Moodboard</h2>
           <div id="img-centro">
             <img
@@ -321,12 +328,11 @@
               style="border: 1px solid rgba(0, 0, 0, 0.1)"
               width="800"
               height="450"
-              src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGyxpSvWsYiJAOGM4fyGrhJ%2FMake-a-List!%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddev"
+              src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FGyxpSvWsYiJAOGM4fyGrhJ%2FMake-a-List!%3Fnode-id%3D178-1275%26starting-point-node-id%3D178%253A1275%26show-proto-sidebar%3D1%26mode%3Ddesign%26t%3D5KxLMzSJufpVLox3-1"
               allowfullscreen
             ></iframe>
           </div>
         </section>
-
         <section id="heuristicas">
           <h2>Avaliação Heurística - 10 Heurísticas de Nielsen</h2>
           <div id="img-centro">
@@ -360,7 +366,6 @@
             <img src="../assets/images/heuristica10.png" alt="" />
           </div>
         </section>
-
         <section id="front-end">
           <div id="github-title">
             <h2>Front-end</h2>
@@ -376,13 +381,26 @@
           </p>
           <div id="img-centro">
             <div id="badges">
-              <img src="../assets/images/react.png" alt="React logo" />
               <img
+                title="React"
+                src="../assets/images/react.png"
+                alt="React logo"
+              />
+              <img
+                title="Tipescript"
                 src="../assets/images/typescript.png"
                 alt="Typescript logo"
               />
-              <img src="../assets/images/chakra.png" alt="Chakra-UI logo" />
-              <img src="../assets/images/axios.png" alt="Axios logo" />
+              <img
+                title="Chakra-UI"
+                src="../assets/images/chakra.png"
+                alt="Chakra-UI logo"
+              />
+              <img
+                title="Axios"
+                src="../assets/images/axios.png"
+                alt="Axios logo"
+              />
             </div>
           </div>
           <p>
@@ -414,9 +432,9 @@
           </p>
           <div id="img-centro">
             <div id="badges">
-              <img src="../assets/images/nodejs.png" alt="NodeJS logo" />
-              <img src="../assets/images/express.png" alt="Express logo" />
-              <img src="../assets/images/mongoDB.png" alt="MongoDB logo" />
+              <img title="NodeJS" src="../assets/images/nodejs.png" alt="NodeJS logo" />
+              <img title="Express" src="../assets/images/express.png" alt="Express logo" />
+              <img title="MongoDB" src="../assets/images/mongoDB.png" alt="MongoDB logo" />
             </div>
           </div>
         </section>
