refact: corrige nome

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 alt="React logo"
               />
               <img
-                title="Tipescript"
+                title="Typescript"
                 src="../assets/images/typescript.png"
                 alt="Typescript logo"
               />
